--- a/src/main/resources/templates/job-detail.html
+++ b/src/main/resources/templates/job-detail.html
@@ -13,35 +13,35 @@
 
 
     <div th:fragment="jobs-list">
-            <div  th:each="job : ${someJob}">
+
                 <table  th:fragment="single-job" class="job-listing">
                     <tr>
                         <th>Name</th>
-                        <td th:text="${job.name}"></td>
+                        <td th:text="${someJob.name}"></td>
                     </tr>
                     <tr>
                         <th>Employer</th>
-                        <td th:text="${job.employer}"></td>
+                        <td th:text="${someJob.employer}"></td>
                     </tr>
                     <tr>
                         <th>Location</th>
-                        <td th:text="${job.location}"></td>
+                        <td th:text="${someJob.location}"></td>
                     </tr>
                     <tr>
                         <th>Position Type</th>
-                        <td th:text="${job.positionType}"></td>
+                        <td th:text="${someJob.positionType}"></td>
                     </tr>
                     <tr>
                         <th>Skill</th>
-                        <td th:text="${job.coreCompetency}"></td>
+                        <td th:text="${someJob.coreCompetency}"></td>
                     </tr>
                 </table>
             </div>
 
-
     </div>
 
-</div>
+
+
 
 </body>
 </html>
